Setup authorization; simple UI for main screen

--- a/Blog-integration/Controllers/Main/MainVC.xib
+++ b/Blog-integration/Controllers/Main/MainVC.xib
@@ -1,13 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainVC" customModule="Blog_integration" customModuleProvider="target">
             <connections>
+                <outlet property="container" destination="Zuy-Gf-6a5" id="F7M-0I-ybq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,7 +20,60 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DfI-Iq-hn7">
+                    <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="rUA-su-VZm">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IW-TS-cmm">
+                                    <rect key="frame" x="0.0" y="0.0" width="187.5" height="50"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                    <state key="normal" title="My blog">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="myBlogTapped:" destination="-1" eventType="touchUpInside" id="pcb-Ol-a7W"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYH-aK-4gf">
+                                    <rect key="frame" x="187.5" y="0.0" width="187.5" height="50"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                    <state key="normal" title="Top users">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="topUsersTapped:" destination="-1" eventType="touchUpInside" id="E07-KK-hcb"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" red="0.1333333333" green="0.42352941179999998" blue="0.70196078429999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="rUA-su-VZm" secondAttribute="trailing" id="HGp-Qb-XKf"/>
+                        <constraint firstItem="rUA-su-VZm" firstAttribute="leading" secondItem="DfI-Iq-hn7" secondAttribute="leading" id="O5P-Sf-gxn"/>
+                        <constraint firstItem="rUA-su-VZm" firstAttribute="top" secondItem="DfI-Iq-hn7" secondAttribute="top" id="kaP-XQ-KRH"/>
+                        <constraint firstAttribute="height" constant="50" id="kot-2b-H6D"/>
+                        <constraint firstAttribute="bottom" secondItem="rUA-su-VZm" secondAttribute="bottom" id="z0H-NP-Xxy"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zuy-Gf-6a5">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="DfI-Iq-hn7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="KGE-GC-cQj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Zuy-Gf-6a5" secondAttribute="trailing" id="UhQ-U8-Kc9"/>
+                <constraint firstItem="Zuy-Gf-6a5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Vgj-GS-PSH"/>
+                <constraint firstItem="Zuy-Gf-6a5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Ys4-gW-mrF"/>
+                <constraint firstItem="DfI-Iq-hn7" firstAttribute="top" secondItem="Zuy-Gf-6a5" secondAttribute="bottom" id="aUP-Zm-aW4"/>
+                <constraint firstItem="DfI-Iq-hn7" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="bCV-Eq-FCd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="DfI-Iq-hn7" secondAttribute="trailing" id="dpz-ed-D09"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
     </objects>
