--- a/Blog-integration/Controllers/Main/TopUsersVC.xib
+++ b/Blog-integration/Controllers/Main/TopUsersVC.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopUsersVC" customModule="Blog_integration" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="yEj-Z8-YLD" id="s1b-GR-er2"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -45,12 +46,24 @@
                         <constraint firstAttribute="trailing" secondItem="dyX-i2-JVT" secondAttribute="trailing" id="xFO-vS-a5J"/>
                     </constraints>
                 </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yEj-Z8-YLD">
+                    <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="rWB-gF-cf1"/>
+                        <outlet property="delegate" destination="-1" id="Rna-w9-iBy"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="yEj-Z8-YLD" secondAttribute="bottom" id="4k4-hp-rx8"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Y2w-pN-udA" secondAttribute="trailing" id="INj-t1-AIV"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="yEj-Z8-YLD" secondAttribute="trailing" id="JEQ-Fd-H7a"/>
+                <constraint firstItem="yEj-Z8-YLD" firstAttribute="top" secondItem="Y2w-pN-udA" secondAttribute="bottom" id="K0K-vm-kNv"/>
                 <constraint firstItem="Y2w-pN-udA" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="dkY-ys-iT8"/>
                 <constraint firstItem="Y2w-pN-udA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="eH3-yE-vek"/>
+                <constraint firstItem="yEj-Z8-YLD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="hve-2g-Vdy"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
